Avoid margin collapsing

--- a/styles/main.css
+++ b/styles/main.css
@@ -88,7 +88,7 @@ article[data-open] .content {
 }
 
 article .content {
-    padding: 0 15%;
+    padding: 1px 15%;
     text-align: justify;
     line-height: 1.5;
 }
